tests/baselines/reference/cachedModuleResolution6.errors.txt
/a/b/c/d/e/app.ts(1,17): error TS5084: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
/a/b/c/lib.ts(1,17): error TS5084: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== /a/b/c/d/e/app.ts (1 errors) ====
    import {x} from "foo";
                    ~~~~~
!!! error TS5084: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    
==== /a/b/c/lib.ts (1 errors) ====
    import {x} from "foo";
                    ~~~~~
!!! error TS5084: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?